frontend/style.css
html {
    /* background-color: var(--bgColor); */
    background-image: url('https://upload.wikimedia.org/wikipedia/commons/f/fd/LGBTQ%2B_rainbow_flag_Quasar_%22Progress%22_variant.svg');
    background-attachment: fixed;
    background-blend-mode: darken;
    background-size: cover;
    background-color: #111111DD;
    font-family: 'Open Sans';
    font-size: 1rem;
}

/* For icons but it's weird so I won't do em for now */
.iconColor1 {
    transition: 0.2s ease-in-out;
    stroke: var(--highlightedColor);
    stroke-width: 0.5;
    fill: var(--hightlightColorIntense)
}

.iconColor2 {
    transition: 0.2s ease-in-out;
    stroke: var(--textColor);
}

.iconColor3 {
    transition: 0.2s ease-in-out;
    fill: var(--textColor);
}

:root {
    --red: #eb0303;
    --redDark: #ab0d0e;
    --textColor: #EEEEEE;
    --bgColor: #181A1B;
    --hightlightColor: #202324;
    --hightlightColorIntense: #424546;
    --hoverColor: #2B2F31;
    --selectedColor: #35393B;
    --highlightedColor: #63FAC3;
    --brightHoverColor: #4aaf8b;
    --brightHighlightColor: #397e66;
    font-size: 18px!important;
}

b {
    color: var(--highlightedColor);
}

h1 {
    color: var(--highlightedColor);
}

h2 {
    color: var(--highlightedColor);
}

h3 {
    color: var(--highlightedColor);
}

h4 {
    color: var(--highlightedColor);
}

.textbox {
    visibility: visible;
    border-radius: 5px;
    background-color: var(--bgColor);
    padding: 2px;
    outline-width: 0;
    width: fit-content;
    margin-top: 5px;
}

body {
    margin: 0;
    color: var(--textColor);
    line-height: 1.8;
}

.tabContainer {
    display: flex;
    flex-direction: column;
}

.tab {
    background-color: var(--hightlightColor);
}

.tab button {
    background-color: inherit;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    font-size: 1.1em;
    transition: 0.2s;
}

button {
    color: var(--textColor)
}

.contextMenu {
    position:absolute;
    background-color: var(--hightlightColor);
    border-radius: 5px;
    top: 0;
    left: 0;
    border: 1px solid var(--highlightedColor);
}

.contextMenuElement {
    background-color: var(--hightlightColor);
    color: var(--textColor);
    padding: 5px;
}

.contextMenuElement:hover {
    background-color: var(--hoverColor);
    color: var(--highlightedColor);
}
  
  /* Change background color of buttons on hover */
.tab button:hover {
    background-color: var(--hoverColor);
}
  
  /* Create an active/current tablink class */
.tab button.active {
    background-color: var(--selectedColor);
}
  
  /* Style the tab content */
.tabcontent {
    display: none;
    padding: 6px 12px;
}



.content {
    position: relative;
    margin-top: 80px;
    padding: 10px;
}

.searchResults {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
}

.loader {
    border-radius: 50%;
    border: 10px solid var(--hightlightColor);
    width: 70px;
    height: 70px;
    border-top: 10px solid var(--highlightedColor);
    animation-duration: 2s;
    animation-name: spin;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
}

.centerIt {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: center;
}

@keyframes spin {
    0% {transform: rotate(0deg);}
    100% {transform: rotate(360deg);}
}

code {
    border: var(--brightHighlightColor) 1px solid;
    border-radius: 5px;
    background-color: var(--bgColor);
    font-family: Consolas;
    padding: 5px;
}

.flex {
    display: flex;
    align-items: center;
}

.outside {
    display: flex;
    align-items: center;
}

.anim {
    transition: 0.2s ease-in-out;
}

.noselect {
    user-select: none;
}

.rotate {
    transform: rotate(90deg);
}

.hidden {
    display: none;
}

.header {
    width: 100%;
    cursor: pointer;
    transition: 0.2s ease-in-out;
}

.header:hover {
    color: var(--brightHoverColor);
}

.application {
    background-color: var(--hightlightColor);
    padding: 10px;
    border-radius: 5px;
    margin-bottom: 10px;
    display: flex;
    justify-content: space-between;
}

.buttons {
    display: flex;
    flex-direction: column;
    margin-right: 10px;
}

.buttons input {
    margin-top: 5px;
}

.info {
    flex: 1;
    width: 100%;
}

.popUp {
    width: 100%;
    height: 100vh;
    top: 0;
    left: 0;
    position: fixed;
    background-color: #000000aa;
}

.popUpContent {
    padding: 10px;
    border-radius: 5px;
    background-color: var(--hightlightColorIntense);
}

.navBar {
    top: 0;
    left: 0;
    display: flex;
    background-color: var(--hightlightColor);
    height: 60px;
    justify-content: space-between;
    flex-direction: row;
    padding: 10px;
    position: fixed;
    width: 100vw;
    box-sizing: border-box;
}

.navBarInnerLeft {
    display: flex;
    justify-items: center;
    align-items: center;
}

.navBarInnerRight {
    display: flex;
    justify-items: center;
    align-items: center;
}

.visible {
    display: flex !important;
}

/* mobile*/
@media screen and (max-width: 1200px) {
    .navBarInnerLeft {
        flex-direction: column;
    }

    .title {
        display: none;
    }

    .navBarInnerRight {
        height: max-content;
        flex-direction: column;
        display: none;
        background-color: var(--hightlightColor);
        padding: 10px;
        border-radius: 5px;
        transform: translateY(60px) translateX(-20px);
    }

    .navBarPart {
        width: 1cm;
        height: 0.2cm;
        border-top: 0.1cm solid var(--highlightedColor);
    }

    .navBarPartBottom {
        width: 1cm;
        height: 0.1cm;
        border-top: 0.1cm solid var(--highlightedColor);
    }

    .navBarToggle {
        height: min-content;
        position: absolute;
        top: 15px;
        right: 20px;
    }
}

/* desktop*/
@media screen and (min-width: 1200px) {
    .navBarInnerLeft {
        flex-direction: row;
    }
    .navBarInnerRight {
        flex-direction: row-reverse;
    }

    .navBarToggle {
        display: none;
    }
}

.navBarElement {
    margin-right: 20px;
}

.underlineAnimation {
    transition: ease-in-out 0.2s;
    position: relative;
    cursor: pointer;
}

.underlineAnimation:after {
    content: '';
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 2px;
    bottom: 0;
    left: 0;
    background-color: var(--highlightedColor);
    transform-origin: bottom right;
    transition: transform 0.2s ease-out;
}

.underlineAnimation:hover:after {
    transform: scaleX(1);
    transform-origin: bottom left;
}

table {
    background-color: var(--hightlightColor);
    border-radius: 5px;
    padding: 20px;
    
    border-collapse: collapse;
}

.application table {
    width: 100%;
    table-layout: fixed;
}

tr {
    border-bottom: 2px solid var(--textColor);
    max-width: 100%;
}

td {
    padding: 10px;
    vertical-align: top;
    text-overflow: ellipsis;
    overflow: hidden;
    width: fit-content;
}

.websitename {
    color: var(--textColor);
    transition: 0.2s ease-in-out;
}

.websitename:hover {
    color: var(--highlightedColor);
}

.label {
    width: fit-content!important;
    white-space: nowrap;
    color: var(--highlightedColor);
}

.value {
    width: 100%;
    text-overflow: ellipsis;
}

a {
    color: var(--highlightedColor);
}

.navBar a {
    text-decoration: none;
}

a:visited {
    color: var(--highlightedColor);
}



.red {
    border: 1px solid var(--redDark)!important;
    color: var(--redDark)!important;
}

.red:hover {
    border: 1px solid var(--red)!important;
    color: var(--red)!important;
}

input {
    color: var(--textColor);
    transition: ease-in-out 0.2s;
    border-radius: 5px;
    border: 1px solid var(--textColor);
    background-color: var(--bgColor);
    padding: 5px;
    outline-width: 0;
    border: 1px solid var(--brightHoverColor);
}


input:hover {
    border: 1px solid var(--highlightedColor);
    
}

input[type=button]:hover {
    color: var(--highlightedColor);
}

input:focus {
    border: 1px solid var(--highlightedColor);
    background-color: var(--bgColor);
}

select {
    padding: 5px;
    border-radius: 5px;
    background-color: var(--bgColor);
    color: var(--textColor);
    border: 1px var(--highlightedColor) solid;
}

select:active {
    border: none;
}

input[type=button] {
    color: var(--brightHoverColor);
    height: fit-content;
    width: fit-content;
    font-size: .8em;
}

input[type=checkbox] {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
}

.checkmarkContainer {
    display: block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 12px;
    margin-top: 12px;
    cursor: pointer;
    transition: 0.2s ease-in-out;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.checkmarkContainer:hover {
    color: var(--brightHoverColor)
}

.checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 25px;
    width: 25px;
    background-color: var(--hightlightColor);
}

.centerIt input {
    margin: 2.5px;
}



.checkmarkContainer:hover input ~ .checkmark {
    background-color: var(--hightlightColorIntense);
}

.checkmarkContainer input:checked ~ .checkmark {
    background-color: var(--highlightedColor);
}

input[type=checkbox]:checked {
    background-color: var(--hightlightedColor);
}

.checkmark:after {
    content: "X";
    position: absolute;
    display: none;
}

.checkmarkContainer .checkmark:after {
    left: 9px;
    top: 5px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

